# gpu-booking-app-plugin

./: .gitignore  ARCHITECTURE.md  Containerfile  README.md  console-extensions.json  package.json  webpack.config.ts
a2a/gpu_booking_agent/: .env.gemini  .env.llamastack  .env.ollama  Dockerfile  README.md  pyproject.toml
a2a/gpu_booking_agent/deployment/: k8s.yaml
a2a/gpu_booking_agent/gpu_booking_agent/: agent.py  endpoint_config.py  observability.py
a2a/gpu_booking_agent/tests/: test_dynamic_model.py
chart/: values.yaml
chart/templates/: configmap.yaml  deployment.yaml  rbac.yaml
cmd/backend/: bookings.db-shm  bookings.db-wal  main.go
deploy/agentic/: Containerfile.server  adk-agent.yaml  consoleplugin-patch.yaml  mcp-tool.yaml  secrets.yaml.example
deploy/plugin/: Containerfile.plugin  deployment.yaml  nginx.conf
mcp/gpu_booking_tool/: Dockerfile  README.md  gpu_booking_tool.py  observability.py  pyproject.toml  schemas.py
mcp/gpu_booking_tool/deployment/: k8s.yaml
mcp/gpu_booking_tool/providers/: __init__.py  http_provider.py
pkg/api/: admin.go  admin_test.go  auth.go  bookings.go  bookings_test.go  llm_endpoints.go  validate.go  validate_test.go
pkg/database/: database.go  database_test.go
pkg/kube/: discovery.go  discovery_test.go  kueue.go  kueue_test.go  reservations.go  reservations_kueue_test.go  reservations_test.go
src/components/: AdminPage.tsx  AgentPage.tsx  BookingCell.tsx  BookingModal.tsx  BookingPage.tsx  GpuUsagePanel.tsx  styles.css
src/docs/: README.md  admin.md  faq.md  getting-started.md  gpu-resources.md  (+1 more)
(+12 files in other folders)
